--- a/themes/base/sass/Components/_action.scss
+++ b/themes/base/sass/Components/_action.scss
@@ -49,3 +49,9 @@ $_action-border: 1px solid palette(layout, border);
 .snip-actions__link--right {
     float: right;
 }
+
+$(function() {
+  $('#currency').change(function() {
+    Snipcart.api.setCurrency($(this).val());
+  });
+});
